delete carpeta view

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/view/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Página Principal</title>
   </head>
   <body>
     <header class="header">
-      <img src="/view/img/logo.png" alt="logo" />
+      <img src="/img/logo.png" alt="logo" />
       <h1 class="title">Tienda Online Todo Deportes</h1>
     </header>
     <nav class="menu">
@@ -17,32 +17,31 @@
       <ul>
         <li>
           <a class="section-futbol" href="#section-futbol"
-            ><img src="/view/img/futbol.svg" alt="futbol" />Sección Futbol</a>
+            ><img src="/img/futbol.svg" alt="futbol" />Sección Futbol</a>
         </li>
         <li>
           <a class="section-basquet" href="#section-basquet"
-            ><img src="/view/img/basquet.svg" alt="basquet" /> Sección Basquet</a>
+            ><img src="/img/basquet.svg" alt="basquet" /> Sección Basquet</a>
         </li>
         <li>
           <a class="section-tenis" href="#section-tenis"
-            ><img src="/view/img/tenis.svg" alt="tenis" /> Sección Tenis</a
+            ><img src="/img/tenis.svg" alt="tenis" /> Sección Tenis</a
           >
         </li>
         <li>
           <a class="section-natacion" href="#section-natacion"
-            ><img src="/view/img/natacion.svg" alt="natacion" /> Sección Natacion</a>
+            ><img src="/img/natacion.svg" alt="natacion" /> Sección Natacion</a>
         </li>
       </ul>
     </nav>
     <main class="main">
       <section class="section-1">
-        <!--<section id="section-futbol" class="section-1">-->
         <a name="section-futbol"></a>
         <h2 class="section-name">Futbol</h2>
         <article>
           <div class="card card-futbol">
             <img
-              src="/view/img/botines-de-futbol-puma-ultra.jpg"
+              src="/img/botines-de-futbol-puma-ultra.jpg"
               alt="botines-de-futbol-puma-ultra"
             />
             <h1>Botines Puma Ultra</h1>
@@ -50,7 +49,7 @@
           </div>
           <div class="card card-futbol">
             <img
-              src="/view/img/pelota-de-argentina-adidas.jpg"
+              src="/img/pelota-de-argentina-adidas.jpg"
               alt="pelota-de-argentina-adidas"
             />
             <h1>Pelota Adidas Argentina</h1>
@@ -58,7 +57,7 @@
           </div>
           <div class="card card-futbol">
             <img
-              src="/view/img/camiseta-de-argentina-adidas.jpg"
+              src="/img/camiseta-de-argentina-adidas.jpg"
               alt="camiseta-de-argentina-adidas"
             />
             <h1>Camiseta Seleccion Argentina</h1>
@@ -67,26 +66,25 @@
         </article>
       </section>
       <section class="section-2">
-        <!--<section id="section-basquet" class="section-2">-->
         <a name="section-basquet"></a>
         <h2 class="section-name">Basquet</h2>
         <article>
           <div class="card card-basquet">
             <img
-              src="/view/img/zapatilla-de-basquet.jpg"
+              src="/img/zapatilla-de-basquet.jpg"
               alt="zapatilla-de-basquet"
             />
             <h1>Zapatilla de Basquet</h1>
             <p class="price">$8.499</p>
           </div>
           <div class="card card-basquet">
-            <img src="/view/img/pelota-basquet.jpg" alt="pelota-basquet" />
+            <img src="/img/pelota-basquet.jpg" alt="pelota-basquet" />
             <h1>Pelota de Basquet</h1>
             <p class="price">$2.940</p>
           </div>
           <div class="card card-basquet">
             <img
-              src="/view/img/aro-de-basquet-profesional.jpg"
+              src="/img/aro-de-basquet-profesional.jpg"
               alt="aro-de-basquet-profesional"
             />
             <h1>Aro de Basquet profesional</h1>
@@ -94,48 +92,46 @@
           </div>
         </article>
       </section>
-      <!--<section id="section-tenis" class="section-3">-->
         <section class="section-3">
         <a name="section-tenis"></a>
         <h2 class="section-name">Tenis</h2>
         <article>
           <div class="card card-tenis">
-            <img src="/view/img/raqueta-tenis.jpg" alt="raqueta-padel" />
+            <img src="/img/raqueta-tenis.jpg" alt="raqueta-padel" />
             <h1>Raqueta TI Radical Elite</h1>
             <p class="price">$19.99</p>
           </div>
           <div class="card card-tenis">
-            <img src="/view/img/pelota-wilson.jpg" alt="pelota-wilson" />
+            <img src="/img/pelota-wilson.jpg" alt="pelota-wilson" />
             <h1>Pelota Wilson</h1>
             <p class="price">$19.99</p>
           </div>
           <div class="card card-tenis">
-            <img src="/view/img/bolso-head-tenis.jpg" alt="bolso-tenis" />
+            <img src="/img/bolso-head-tenis.jpg" alt="bolso-tenis" />
             <h1>Bolso Paletero Head</h1>
             <p class="price">$19.99</p>
           </div>
         </article>
       </section>
-      <!--<section id="section-natacion" class="section-4">-->
       <section class="section-4">
         <a name="section-natacion"></a>
         <h2 class="section-name">Natación</h2>
         <article>
           <div class="card card-natacion">
             <img
-              src="/view/img/antiparras-natacion.jpg"
+              src="/img/antiparras-natacion.jpg"
               alt="antiparras-natacion"
             />
             <h1>Antiparras Arco</h1>
             <p class="price">$19.99</p>
           </div>
           <div class="card card-natacion">
-            <img src="/view/img/gorro-natacion.jpg" alt="gorro-natacion" />
+            <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
             <h1>Gorro Arena</h1>
             <p class="price">$19.99</p>
           </div>
           <div class="card card-natacion">
-            <img src="/view/img/patas-de-rana-natacion.jpg" alt="patas-natacion"/>
+            <img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion"/>
             <h1>Patas de Rana Arena</h1>
             <p class="price">$19.99</p>
           </div>
