html para categoria futbol

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Página Principal</title>
+    <title>Todo Deportes</title>
+    <link rel="shortcut icon" href="/img/logo-icon.svg" type="image/svg+xml">
   </head>
   <body>
     <header class="header">
@@ -35,9 +36,10 @@
       </ul>
     </nav>
     <main class="main">
-      <section class="section-1">
+      <header><h2 class="title">Articulos deportivos para todo tipo de Deportes!!!</h2></header>    
+      <section class="section">
         <a name="section-futbol"></a>
-        <h2 class="section-name">Futbol</h2>
+        <a href="/html/section-futbol.html" target="_blank">Futbol</a>
         <article>
           <div class="card card-futbol">
             <img
@@ -65,9 +67,9 @@
           </div>
         </article>
       </section>
-      <section class="section-2">
+      <section class="section">
         <a name="section-basquet"></a>
-        <h2 class="section-name">Basquet</h2>
+        <a href="" target="_blank">Basquet</a> 
         <article>
           <div class="card card-basquet">
             <img
@@ -92,9 +94,9 @@
           </div>
         </article>
       </section>
-        <section class="section-3">
+        <section class="section">
         <a name="section-tenis"></a>
-        <h2 class="section-name">Tenis</h2>
+        <a href="" target="_blank">Tenis</a>
         <article>
           <div class="card card-tenis">
             <img src="/img/raqueta-tenis.jpg" alt="raqueta-padel" />
@@ -113,9 +115,9 @@
           </div>
         </article>
       </section>
-      <section class="section-4">
+      <section class="section">
         <a name="section-natacion"></a>
-        <h2 class="section-name">Natación</h2>
+        <a href="" target="_blank">Natación</a> 
         <article>
           <div class="card card-natacion">
             <img
@@ -139,7 +141,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>&copy; Tienda de Deportes - Grupo 1 (nombres? ).</p>
+      <p>&copy; Tienda de Deportes - Grupo 1 (Nicolas Acuña, Christian Botta).</p>
     </footer>
   </body>
 </html>
