--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD:public/html/index.html
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>Todo Deportes</title>
     <link rel="shortcut icon" href="/img/logo-icon.svg" type="image/svg+xml">
-  </head>
-  <body>
-    <header class="header">
-      <img src="/img/logo.png" alt="logo" />
-      <h1 class="title">Tienda Online Todo Deportes</h1>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/view/css/normalize.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -34,12 +23,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/view/css/styles.css" />
-    <title>Página Principal</title>
-  </head>
+  </head>   
   <body>
     <header class="header">
       <img src="/view/img/logo.png" alt="logo" class="logo" />
+      <h1 class="title">Tienda Online Todo Deportes</h1>
       <div class="search">
         <input
           type="text"
@@ -51,61 +39,38 @@
         </a>
       </div>
       <i class="material-icons cart">shopping_cart</i>
->>>>>>> ramachris:public/view/html/index.html
     </header>
     <nav class="menu">
       <ul>
         <li>
           <a class="section-futbol" href="#section-futbol"
-<<<<<<< HEAD:public/html/index.html
-            ><img src="/img/futbol.svg" alt="futbol" />Sección Futbol</a>
-        </li>
-        <li>
-          <a class="section-basquet" href="#section-basquet"
-            ><img src="/img/basquet.svg" alt="basquet" /> Sección Basquet</a>
-        </li>
-        <li>
-          <a class="section-tenis" href="#section-tenis"
-            ><img src="/img/tenis.svg" alt="tenis" /> Sección Tenis</a
-=======
-            ><img src="/view/img/futbol.svg" alt="futbol" /> Fútbol</a
+            ><img src="/img/futbol.svg" alt="futbol" /> Fútbol</a
           >
         </li>
         <li>
           <a class="section-basquet" href="#section-basquet"
-            ><img src="/view/img/basquet.svg" alt="basquet" /> Basquet</a
+            ><img src="/img/basquet.svg" alt="basquet" /> Basquet</a
           >
         </li>
         <li>
           <a class="section-tenis" href="#section-tenis"
-            ><img src="/view/img/tenis.svg" alt="tenis" /> Tenis</a
->>>>>>> ramachris:public/view/html/index.html
+            ><img src="/img/tenis.svg" alt="tenis" /> Tenis</a
           >
         </li>
         <li>
           <a class="section-natacion" href="#section-natacion"
-<<<<<<< HEAD:public/html/index.html
-            ><img src="/img/natacion.svg" alt="natacion" /> Sección Natacion</a>
-=======
-            ><img src="/view/img/natacion.svg" alt="natacion" /> Natacion</a
+            ><img src="/img/natacion.svg" alt="natacion" /> Natacion</a
           >
->>>>>>> ramachris:public/view/html/index.html
         </li>
       </ul>
     </nav>
     <main class="main">
-<<<<<<< HEAD:public/html/index.html
       <header><h2 class="title">Articulos deportivos para todo tipo de Deportes!!!</h2></header>    
-      <section class="section">
-        <a name="section-futbol"></a>
-        <a href="/html/section-futbol.html" target="_blank">Futbol</a>
-=======
       <section id="section-futbol" class="section-1">
+        <a name="section-futbol"></a>
         <div class="sub-title sub-futbol">
-          <h1 class="section-name">Fútbol</h1>
+          <a href="/html/section-futbol.html" target="_blank">Futbol</a>
         </div>
-
->>>>>>> ramachris:public/view/html/index.html
         <article>
           <div class="card card-futbol">
             <img
@@ -136,16 +101,13 @@
           </div>
         </article>
       </section>
-<<<<<<< HEAD:public/html/index.html
-      <section class="section">
-        <a name="section-basquet"></a>
-        <a href="" target="_blank">Basquet</a> 
-=======
+
+      
       <section id="section-basquet" class="section-2">
+        <a name="section-basquet"></a>
         <div class="sub-title sub-basquet">
-          <h1 class="section-name">Basquet</h1>
+          <a href="" target="_blank">Basquet</a> 
         </div>
->>>>>>> ramachris:public/view/html/index.html
         <article>
           <div class="card card-basquet">
             <img
@@ -157,13 +119,8 @@
             <a href="#" class="button">Ver Más</a>
           </div>
           <div class="card card-basquet">
-<<<<<<< HEAD:public/html/index.html
             <img src="/img/pelota-basquet.jpg" alt="pelota-basquet" />
-            <h1>Pelota de Basquet</h1>
-=======
-            <img src="/view/img/pelota-basquet.jpg" alt="pelota-basquet" />
             <h1 class="description">Pelota de Basquet</h1>
->>>>>>> ramachris:public/view/html/index.html
             <p class="price">$2.940</p>
             <a href="#" class="button">Ver Más</a>
           </div>
@@ -178,37 +135,11 @@
           </div>
         </article>
       </section>
-<<<<<<< HEAD:public/html/index.html
-        <section class="section">
-        <a name="section-tenis"></a>
-        <a href="" target="_blank">Tenis</a>
-        <article>
-          <div class="card card-tenis">
-            <img src="/img/raqueta-tenis.jpg" alt="raqueta-padel" />
-            <h1>Raqueta TI Radical Elite</h1>
-            <p class="price">$19.99</p>
-          </div>
-          <div class="card card-tenis">
-            <img src="/img/pelota-wilson.jpg" alt="pelota-wilson" />
-            <h1>Pelota Wilson</h1>
-            <p class="price">$19.99</p>
-          </div>
-          <div class="card card-tenis">
-            <img src="/img/bolso-head-tenis.jpg" alt="bolso-tenis" />
-            <h1>Bolso Paletero Head</h1>
-            <p class="price">$19.99</p>
-          </div>
-        </article>
-      </section>
-      <section class="section">
-        <a name="section-natacion"></a>
-        <a href="" target="_blank">Natación</a> 
-=======
+
       <section id="section-tenis" class="section-3">
         <div class="sub-title sub-tenis">
-          <h1 class="section-name">Tenis</h1>
+          <a href="" target="_blank">Tenis</a> 
         </div>
-
         <article>
           <div class="card card-tenis">
             <img
@@ -233,31 +164,17 @@
           </div>
         </article>
       </section>
+      
       <section id="section-natacion" class="section-4">
         <div class="sub-title sub-natacion">
           <h1 class="section-name">Natación</h1>
         </div>
->>>>>>> ramachris:public/view/html/index.html
         <article>
           <div class="card card-natacion">
             <img
               src="/img/antiparras-natacion.jpg"
               alt="antiparras-natacion"
             />
-<<<<<<< HEAD:public/html/index.html
-            <h1>Antiparras Arco</h1>
-            <p class="price">$19.99</p>
-          </div>
-          <div class="card card-natacion">
-            <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
-            <h1>Gorro Arena</h1>
-            <p class="price">$19.99</p>
-          </div>
-          <div class="card card-natacion">
-            <img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion"/>
-            <h1>Patas de Rana Arena</h1>
-            <p class="price">$19.99</p>
-=======
             <h1 class="description">Antiparras Arena</h1>
             <p class="price">$3.710</p>
             <a href="#" class="button">Ver Más</a>
@@ -276,17 +193,12 @@
             <h1 class="description">Patas de Rana Arena</h1>
             <p class="price">$2.355</p>
             <a href="#" class="button">Ver Más</a>
->>>>>>> ramachris:public/view/html/index.html
           </div>
         </article>
       </section>
     </main>
     <footer class="footer">
-<<<<<<< HEAD:public/html/index.html
       <p>&copy; Tienda de Deportes - Grupo 1 (Nicolas Acuña, Christian Botta).</p>
-=======
-      <p>&copy; Tienda de Deportes - Grupo 1 (Nicolas Acuña - Christian Botta).</p>
->>>>>>> ramachris:public/view/html/index.html
     </footer>
   </body>
 </html>
