--- a/public/html/index.html
+++ b/public/html/index.html
@@ -26,7 +26,7 @@
   </head>   
   <body>
     <header class="header">
-      <img src="/view/img/logo.png" alt="logo" class="logo" />
+      <img src="/img/logo.png" alt="logo" class="logo" />
       <h1 class="title">Tienda Online Todo Deportes</h1>
       <div class="search">
         <input
@@ -66,12 +66,12 @@
     </nav>
     <main class="main">
       <header><h2 class="title">Articulos deportivos para todo tipo de Deportes!!!</h2></header>    
-      <section id="section-futbol" class="section-1">
+      <section id="section-futbol" class="section">
         <a name="section-futbol"></a>
         <div class="sub-title sub-futbol">
           <a href="/html/section-futbol.html" target="_blank">Futbol</a>
         </div>
-        <article>
+        <article class="article">
           <div class="card card-futbol">
             <img
               src="/img/botines-de-futbol-puma-ultra.jpg"
@@ -103,12 +103,12 @@
       </section>
 
       
-      <section id="section-basquet" class="section-2">
+      <section id="section-basquet" class="section">
         <a name="section-basquet"></a>
         <div class="sub-title sub-basquet">
           <a href="" target="_blank">Basquet</a> 
         </div>
-        <article>
+        <article class="article">
           <div class="card card-basquet">
             <img
               src="/img/zapatilla-de-basquet.jpg"
@@ -136,28 +136,28 @@
         </article>
       </section>
 
-      <section id="section-tenis" class="section-3">
+      <section id="section-tenis" class="section">
         <div class="sub-title sub-tenis">
           <a href="" target="_blank">Tenis</a> 
         </div>
-        <article>
+        <article class="article">
           <div class="card card-tenis">
             <img
-              src="/view/img/muñequera-topper-tenis.jpg"
-              alt="raqueta-padel"
+              src="/img/muñequera-topper-tenis.jpg"
+              alt="muñequera-topper-tenis"
             />
             <h1 class="description">Muñequera Topper</h1>
             <p class="price">$768.99</p>
             <a href="#" class="button">Ver Más</a>
           </div>
           <div class="card card-tenis">
-            <img src="/view/img/pelota-prince.jpg" alt="pelota-wilson" />
+            <img src="/img/pelota-prince.jpg" alt="pelota-prince" />
             <h1 class="description">Tubo de Pelota x3 Prince</h1>
             <p class="price">$1.080</p>
             <a href="#" class="button">Ver Más</a>
           </div>
           <div class="card card-tenis">
-            <img src="/view/img/raqueta-tenis.jpg" alt="raqueta-tenis" />
+            <img src="/img/raqueta-tenis.jpg" alt="raqueta-tenis" />
             <h1 class="description">Raqueta Wilson</h1>
             <p class="price">$6.240</p>
             <a href="#" class="button">Ver Más</a>
@@ -165,11 +165,12 @@
         </article>
       </section>
       
-      <section id="section-natacion" class="section-4">
+      <section id="section-natacion" class="section">
         <div class="sub-title sub-natacion">
-          <h1 class="section-name">Natación</h1>
+          <h1 class="section-name"></h1>
+          <a href="" target="_blank">Natación</a> 
         </div>
-        <article>
+        <article class="article">
           <div class="card card-natacion">
             <img
               src="/img/antiparras-natacion.jpg"
@@ -180,14 +181,14 @@
             <a href="#" class="button">Ver Más</a>
           </div>
           <div class="card card-natacion">
-            <img src="/view/img/gorro-natacion.jpg" alt="gorro-natacion" />
+            <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
             <h1 class="description">Gorro Speedo</h1>
             <p class="price">$399.99</p>
             <a href="#" class="button">Ver Más</a>
           </div>
           <div class="card card-natacion">
             <img
-              src="/view/img/patas-de-rana-natacion.jpg"
+              src="/img/patas-de-rana-natacion.jpg"
               alt="patas-natacion"
             />
             <h1 class="description">Patas de Rana Arena</h1>
@@ -198,7 +199,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>&copy; Tienda de Deportes - Grupo 1 (Nicolas Acuña, Christian Botta).</p>
+      <p>&copy; Todo Deportes - Grupo 1 (Nicolas Acuña, Christian Botta).</p>
     </footer>
   </body>
 </html>
