--- a/public/html/section-futbol.html
+++ b/public/html/section-futbol.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/section-futbol.css">
+    <link rel="stylesheet" href="/css/section-deportes.css">
+    <link rel="stylesheet" href="/css/normalize.css">
     <title>Futbol</title>
     <link rel="shortcut icon" href="/img/futbol.svg" type="image/svg+xml">
 </head>
