--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Página Principal</title>
+    <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+    <title>Todo Deportes</title>
 </head>
 
 <body>
