--- a/public/html/section-basquet.html
+++ b/public/html/section-basquet.html
@@ -50,6 +50,9 @@
                                 de amortiguación y confort pisada tras pisada.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -65,6 +68,9 @@
                                 La pelota All Court N°5 es lo que estabas buscando para tus entrenamientos de Basquet. IMPORTANTE El balón debe ser inflado con la presión que indica en el panel cercano a la válvula.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -79,6 +85,9 @@
                             <p class="detail-text">
                                 Aro de basquet profesional. IMPORTANTE Utilizar los tornillos que incluye el set.
                             </p>
+                        </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
                         </div>
                     </div>
                 </div>
