--- a/public/html/section-futbol.html
+++ b/public/html/section-futbol.html
@@ -49,6 +49,9 @@
                                 duradero, y una suela exterior SpeedUnit de TPU ultrarrápida e inspirada en los clavos de running, para proporcionarte la mejor mezcla de agilidad y estabilidad. Suela diseñada para canchas de césped natural.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -64,6 +67,9 @@
                                 Un homenaje a una nación que vive y respira fútbol. Los estadios, las canciones y los trofeos hacen única esta pelota ADIDAS Argentina League. Su estructura sin costuras y el sello de calidad FIFA Quality la hacen predecible y perfecta en la cancha. El
                                 escudo de Argentina destaca tu pasión. Tecnología TSBE que permite una estructura sin costuras. Tamaño: N°5. IMPORTANTE: El balón debe ser inflado con la presión que indica en el panel cercano a la válvula.
                             </p>
+                        </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
                         </div>
                     </div>
                 </div>
@@ -81,6 +87,9 @@
                                 la unión que genera en todo el mundo tanto en el juego como en los estadios y en las calles. En nuestro país, de Ushuaia a La Quiaca, el fútbol trasciende las fronteras de cada provincia Argentina llegando a cada uno de
                                 sus rincones y embanderándonos detrás de nuestro equipo.
                             </p>
+                        </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
                         </div>
                     </div>
                 </div>
