--- a/public/html/section-natacion.html
+++ b/public/html/section-natacion.html
@@ -40,7 +40,6 @@
                 <div class="card card-natacion">
                     <div class="image"><img src="/img/antiparras-natacion.jpg" alt="antiparras-natacion"></div>
                     <div class="info">
-                        <p class="natacion">Natación</p>
                         <h1>Antiparras Arena</h1>
                         <p class="price">$3.710</p>
                         <div class="details">
@@ -50,6 +49,9 @@
                                 se adaptan de forma cómoda y segura.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -57,7 +59,6 @@
                 <div class="card card-natacion">
                     <div class="image"><img src="/img/gorro-natacion.jpg" alt="gorro-natacion"></div>
                     <div class="info">
-                        <p class="natacion">Natación</p>
                         <h1>Gorro Speedo</h1>
                         <p class="price">$399.99</p>
                         <div class="details">
@@ -66,6 +67,9 @@
                                 Este gorro de natación está recubierto en poliuretano, lo que proporciona mayor resitencia y durabilidad.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -73,7 +77,6 @@
                 <div class="card card-natacion">
                     <div class="image"><img src="/img/patas-de-rana-natacion.jpg" alt="patas-de-rana-natacion"></div>
                     <div class="info">
-                        <p class="natacion">Natación</p>
                         <h1>Patas de Rana Arena</h1>
                         <p class="price">$2.355</p>
                         <div class="details">
@@ -82,9 +85,11 @@
                                 Su innovador diseño muestra una superficie de inclinación hidrodinámica que cuenta con estratégicas ranuras en la parte superior. Es por eso que estas aletas favorecen el desarrollo de una patada más rápida, con un efectivo control, que consigue un gran
                                 estilo de natación. El talón abierto garantiza la máxima flexibilidad y permite que el tobillo pueda tirar hacia arriba más rápido mientras se transmite la máxima potencia a las piernas. Practicar entrenamiento vertical
                                 con Powerfin Pro durante unos minutos al día mejora tu rendimiento bajo el agua. Nadar en vertical ayuda a mejorar el control posicional del cuerpo, asegura un excelente entrenamiento para las piernas y te asegura una patada
-                                más efectiva. Cortes especiales en las estrías inferiores para una patada más rápida y potente. Canales laterales para mejorar el control. Silicona “Long life” para ofrecer la máxima comodidad y reducir las ampollas. Diseño
-                                adaptado al pie izquierdo y derecho.
+                                más efectiva.
                             </p>
+                        </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
                         </div>
                     </div>
                 </div>
