--- a/public/html/section-tenis.html
+++ b/public/html/section-tenis.html
@@ -48,6 +48,9 @@
                                 Muñequera corta. Talle Unisex.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -63,6 +66,9 @@
                                 Las pelotas Tour Premiere es apto para canchas de todas las superficies. Extra Duty. Larga duración. El tubo incluye 3 pelotas.
                             </p>
                         </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -77,6 +83,9 @@
                             <p class="detail-text">
                                 Raqueta Wilson Federer 21 para niño. Incluye funda corta. Edad aproximada 5-6 años. 21”.
                             </p>
+                        </div>
+                        <div class="control-button">
+                            <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
                         </div>
                     </div>
                 </div>
