--- a/public/html/index.html
+++ b/public/html/index.html
@@ -43,6 +43,9 @@
             <li>
                 <a class="section-natacion" href="#section-natacion"><img src="/img/natacion.svg" alt="natacion" /> Natacion</a>
             </li>
+            <li>
+                <a class="section-futbol" href="/html/encuesta.html"><img src="/img/encuesta.svg" alt="encuesta" /> Encuesta</a>
+            </li>
         </ul>
     </nav>
     <main class="main">
