--- a/public/html/encuesta.html
+++ b/public/html/encuesta.html
@@ -91,7 +91,7 @@
                         <label for="comment">Comentario: </label><br>
                         <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
                         <input type="submit" value="Enviar">
-                        <input type="button" value="Cancelar">
+                        <input type="button" value="Cancelar" id="btn-cancel">
                         <input type="reset" value="Restablecer">
                     </div>
                 </form>
