--- a/public/html/encuesta.html
+++ b/public/html/encuesta.html
@@ -89,11 +89,11 @@
 
                     <div class="form-control">
                         <label for="comment">Comentario: </label><br>
-                        <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
-                        <input type="submit" value="Enviar">
-                        <input type="button" value="Cancelar" id="btn-cancel">
-                        <input type="reset" value="Restablecer">
+                        <textarea name="comment" id="comment" cols="30" rows="5"></textarea>
                     </div>
+                    <input type="submit" value="Enviar">
+                    <input type="button" value="Cancelar" id="btn-cancel">
+                    <input type="reset" value="Restablecer">
                 </form>
             </div>
         </section>
