--- a/public/html/encuesta.html
+++ b/public/html/encuesta.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/encuesta.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Encuesta</title>
+    <script src =" https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
 </head>
 <body>
     <header class="header">
