--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Página Principal</title>
+    <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+    <title>Todo Deportes</title>
 </head>
 
 <body>
@@ -41,6 +42,9 @@
             </li>
             <li>
                 <a class="section-natacion" href="#section-natacion"><img src="/img/natacion.svg" alt="natacion" /> Natacion</a>
+            </li>
+            <li>
+                <a class="section-encuesta" href="/html/encuesta.html"><img src="/img/encuesta.svg" alt="encuesta" /> Encuesta</a>
             </li>
         </ul>
     </nav>
