Ajustes en el formulario, campos y botones

--- a/public/html/encuesta.html
+++ b/public/html/encuesta.html
@@ -82,7 +82,7 @@
 
                     <div class="form-control">
                         <label for="email">Email: </label>
-                        <input type="text" name="email" id="email" placeholder="example@mail.com" />
+                        <input type="email" name="email" id="email" placeholder="example@mail.com" />
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
@@ -92,9 +92,9 @@
                         <label for="comment">Comentario: </label><br />
                         <textarea name="comment" id="comment" cols="30" rows="5"></textarea>
                     </div>
-                    <input type="submit" value="Enviar" />
+                    <input type="submit" value="Enviar" id="btn-send" />
                     <input type="button" value="Cancelar" id="btn-cancel" />
-                    <input type="reset" value="Restablecer" />
+                    <input type="reset" value="Restablecer" id="btn-reset" />
                 </form>
             </div>
         </section>
