--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,7 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/modal.css">
     <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Todo Deportes</title>
 </head>
 
@@ -27,7 +29,7 @@
                 <i class="material-icons">search</i>
             </a>
         </div>
-        <a href="#" class="cart-shop"><i class="material-icons cart">shopping_cart</i></a>
+        <a href="#" class="cart-shop cta"><i class="material-icons cart">shopping_cart</i></a>
     </header>
     <nav class="menu">
         <ul>
@@ -49,6 +51,16 @@
         </ul>
     </nav>
     <main class="main">
+
+        <div class="modal-container">
+            <div class="modal modal-close">
+                <p class="close">X</p>
+                <div class="modal-textos">
+                    <p>prueba del modal</p>
+                </div>
+            </div>
+        </div>
+
         <section id="section-futbol" class="section-1">
             <div class="sub-title sub-futbol">
                 <a href="/html/section-futbol.html" class="sub sub-futbol">
@@ -187,6 +199,8 @@
     <footer class="footer">
         <p>&copy; Todo Deportes - Grupo 1 (Nicolas Acuña - Christian Botta).</p>
     </footer>
+
+    <script src="/js/modal.js"></script>
 </body>
 
 </html>
