--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,7 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/modal.css">
+    <link rel="stylesheet" href="/css/carrito.css">
     <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+
     <title>Todo Deportes</title>
 </head>
 
@@ -27,7 +30,7 @@
                 <i class="material-icons">search</i>
             </a>
         </div>
-        <a href="#" class="cart-shop"><i class="material-icons cart">shopping_cart</i></a>
+        <a href="#" class="cart-shop cta"><i class="material-icons cart">shopping_cart</i></a>
     </header>
     <nav class="menu">
         <ul>
@@ -49,144 +52,177 @@
         </ul>
     </nav>
     <main class="main">
-        <section id="section-futbol" class="section-1">
-            <div class="sub-title sub-futbol">
-                <a href="/html/section-futbol.html" class="sub sub-futbol">
-                    <h1 class="section-name">Fútbol</h1>
-                </a>
-            </div>
 
-            <article>
-                <div class="card card-futbol">
-                    <img src="/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra" />
-                    <h1 class="description">Botines Puma Ultra</h1>
-                    <p class="price">$9.299</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-                <div class="card card-futbol">
-                    <img src="/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas" />
-                    <h1 class="description">Pelota Adidas Argentina</h1>
-                    <p class="price">$7.775</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-                <div class="card card-futbol">
-                    <img src="/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas" />
-                    <h1 class="description">Camiseta Seleccion Argentina</h1>
-                    <p class="price">$10.890</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <section id="section-basquet" class="section-2">
-            <div class="sub-title sub-basquet">
-                <a href="/html/section-basquet.html" class="sub sub-basquet">
-                    <h1 class="section-name">Basquet</h1>
-                </a>
-            </div>
-            <article>
-                <div class="card card-basquet">
-                    <img src="/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet" />
-                    <h1 class="description">Zapatilla de Basquet</h1>
-                    <p class="price">$8.499</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-                <div class="card card-basquet">
-                    <img src="/img/pelota-basquet.jpg" alt="pelota-basquet" />
-                    <h1 class="description">Pelota de Basquet</h1>
-                    <p class="price">$2.940</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-                <div class="card card-basquet">
-                    <img src="/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional" />
-                    <h1 class="description">Aro de Basquet profesional</h1>
-                    <p class="price">$5.880</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <section id="section-tenis" class="section-3">
-            <div class="sub-title sub-tenis">
-                <a href="/html/section-tenis.html" class="sub sub-tenis">
-                    <h1 class="section-name">Tenis</h1>
-                </a>
-            </div>
+        <div class="modal-container">
+            <div class="modal modal-close">
+                <p class="close">X</p>
+                <div class="modal-textos">
+                    <h4>Carrito de compras</h4>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Item</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Acción</th>
+                                <th scope="col">Total</th>
+                            </tr>
+                        </thead>
 
-            <article>
-                <div class="card card-tenis">
-                    <img src="/img/muñequera-topper-tenis.jpg" alt="raqueta-padel" />
-                    <h1 class="description">Muñequera Topper</h1>
-                    <p class="price">$768.99</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
+                        <tbody id="items"></tbody>
+
+                        <tfoot>
+                            <tr id="footer">
+                                <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+                            </tr>
+                        </tfoot>
+
+                    </table>
                 </div>
-                <div class="card card-tenis">
-                    <img src="/img/pelota-prince.jpg" alt="pelota-wilson" />
-                    <h1 class="description">Tubo de Pelota x3 Prince</h1>
-                    <p class="price">$1.080</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-                <div class="card card-tenis">
-                    <img src="/img/raqueta-tenis.jpg" alt="raqueta-tenis" />
-                    <h1 class="description">Raqueta Wilson</h1>
-                    <p class="price">$6.240</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <section id="section-natacion" class="section-4">
-            <div class="sub-title sub-natacion">
-                <a href="/html/section-natacion.html" class="sub sub-natacion">
-                    <h1 class="section-name">Natación</h1>
-                </a>
             </div>
-            <article>
-                <div class="card card-natacion">
-                    <img src="/img/antiparras-natacion.jpg" alt="antiparras-natacion" />
-                    <h1 class="description">Antiparras Arena</h1>
-                    <p class="price">$3.710</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
-                    </div>
+        </div>
+
+        <template id="template-footer">
+            <th scope="row" colspan="1">Total productos</th>
+            <td>10</td>
+            <td>
+                <button id="vaciar-carrito">Vaciar todo</button>
+            </td>
+            <td class="font-weight-bold">$ <span>500</span></td>
+        </template>
+
+        <template id="template-carrito">
+            <tr>  
+                <td>producto</td>
+                <td>1</td>
+                <td>
+                    <button class="btn-add"> + </button>
+                    <button class="btn-remove"> - </button>
+                </td>
+                <td>$ <span id="precioTotal">500</span></td>
+            </tr>
+        </template>
+        <div id="cards">
+            <section id="section-futbol" class="section-1">
+                <div class="sub-title sub-futbol">
+                    <a href="/html/section-futbol.html" class="sub sub-futbol">
+                        <h1 class="section-name">Fútbol</h1>
+                    </a>
                 </div>
-                <div class="card card-natacion">
-                    <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
-                    <h1 class="description">Gorro Speedo</h1>
-                    <p class="price">$399.99</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+
+                <article>
+                    <div class="card card-futbol">
+                        <img src="/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra" />
+                        <h1 class="description">Botines Puma Ultra</h1>
+                        <p class="price">$ <span class="prc">9000</span></p>
+                        <button class="button addCarrito" data-id="1">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
-                </div>
-                <div class="card card-natacion">
-                    <img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion" />
-                    <h1 class="description">Patas de Rana Arena</h1>
-                    <p class="price">$2.355</p>
-                    <div class="control-button">
-                        <a href="#" class="button">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></a>
+                    <div class="card card-futbol">
+                        <img src="/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas" />
+                        <h1 class="description">Pelota Adidas Argentina</h1>
+                        <p class="price">$ <span class="prc">7000</span> </p>
+                        <button class="button addCarrito" data-id="2">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
                     </div>
+                    <div class="card card-futbol">
+                        <img src="/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas" />
+                        <h1 class="description">Camiseta Seleccion Argentina</h1>
+                        <p class="price">$ <span class="prc">10890</span></p>
+                        <button class="button addCarrito" data-id="3">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                </article>
+            </section>
+            <section id="section-basquet" class="section-2">
+                <div class="sub-title sub-basquet">
+                    <a href="/html/section-basquet.html" class="sub sub-basquet">
+                        <h1 class="section-name">Basquet</h1>
+                    </a>
                 </div>
-            </article>
-        </section>
+                <article>
+                    <div class="card card-basquet">
+                        <img src="/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet" />
+                        <h1 class="description">Zapatilla de Basquet</h1>
+                        <p class="price">$8.499</p>
+                        <button class="button addCarrito" data-id="4">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-basquet">
+                        <img src="/img/pelota-basquet.jpg" alt="pelota-basquet" />
+                        <h1 class="description">Pelota de Basquet</h1>
+                        <p class="price">$2.940</p>
+                        <button class="button addCarrito" data-id="5">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-basquet">
+                        <img src="/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional" />
+                        <h1 class="description">Aro de Basquet profesional</h1>
+                        <p class="price">$5.880</p>
+                        <button class="button addCarrito" data-id="6">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                </article>
+            </section>
+            <section id="section-tenis" class="section-3">
+                <div class="sub-title sub-tenis">
+                    <a href="/html/section-tenis.html" class="sub sub-tenis">
+                        <h1 class="section-name">Tenis</h1>
+                    </a>
+                </div>
+
+                <article>
+                    <div class="card card-tenis">
+                        <img src="/img/muñequera-topper-tenis.jpg" alt="raqueta-padel" />
+                        <h1 class="description">Muñequera Topper</h1>
+                        <p class="price">$768.99</p>
+                        <button class="button addCarrito" data-id="7">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-tenis">
+                        <img src="/img/pelota-prince.jpg" alt="pelota-wilson" />
+                        <h1 class="description">Tubo de Pelota x3 Prince</h1>
+                        <p class="price">$1.080</p>
+                        <button class="button addCarrito" data-id="8">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-tenis">
+                        <img src="/img/raqueta-tenis.jpg" alt="raqueta-tenis" />
+                        <h1 class="description">Raqueta Wilson</h1>
+                        <p class="price">$6.240</p>
+                        <button class="button addCarrito" data-id="9">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                </article>
+            </section>
+            <section id="section-natacion" class="section-4">
+                <div class="sub-title sub-natacion">
+                    <a href="/html/section-natacion.html" class="sub sub-natacion">
+                        <h1 class="section-name">Natación</h1>
+                    </a>
+                </div>
+                <article>
+                    <div class="card card-natacion">
+                        <img src="/img/antiparras-natacion.jpg" alt="antiparras-natacion" />
+                        <h1 class="description">Antiparras Arena</h1>
+                        <p class="price">$3.710</p>
+                        <button class="button addCarrito" data-id="10">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-natacion">
+                        <img src="/img/gorro-natacion.jpg" alt="gorro-natacion" />
+                        <h1 class="description">Gorro Speedo</h1>
+                        <p class="price">$399.99</p>
+                        <button class="button addCarrito" data-id="11">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                    <div class="card card-natacion">
+                        <img src="/img/patas-de-rana-natacion.jpg" alt="patas-natacion" />
+                        <h1 class="description">Patas de Rana Arena</h1>
+                        <p class="price">$2.355</p>
+                        <button class="button addCarrito" data-id="12">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
+                    </div>
+                </article>
+            </section>
+        </div>
+
     </main>
     <footer class="footer">
         <p>&copy; Todo Deportes - Grupo 1 (Nicolas Acuña - Christian Botta).</p>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/modal.js"></script>
+    <script src="/js/carrito.js"></script>
+
 </body>
 
 </html>
