--- a/public/html/index.html
+++ b/public/html/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <article>
                     <div class="card card-futbol">
-                        <img src="/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra" />
+                        <a class="addCart" data-id="1"><img src="/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra" /></a>
                         <h1 class="description">Botines Puma Ultra</h1>
                         <p class="price">$ <span class="prc">1000</span></p>
                         <button class="button addCart" data-id="1">Añadir al Carrito <i class="material-icons add-cart">add_shopping_cart</i></button>
